Model abstract class added